objects/ASI_MFM_Importation_Document__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Allow_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Importation Documents</relationshipLabel>
        <relationshipName>Importation_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Request_Purpose__c</fullName>
        <inlineHelpText>请详细填写申请目的，如不详细，审批者会拒绝文件请求</inlineHelpText>
        <label>Request Purpose</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Importation_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Importation_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Importation_Documents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Number_of_Line__c</fullName>
        <label>Total Number of Line</label>
        <summaryForeignKey>ASI_MFM_Importation_Document_Detail__c.ASI_MFM_Importation_Document__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Replaceable_Line__c</fullName>
        <label>Total Replaceable Line</label>
        <summaryFilterItems>
            <field>ASI_MFM_Importation_Document_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CN Importation Document Detail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_MFM_Importation_Document_Detail__c.ASI_MFM_Possible_to_Replace__c</field>
            <operation>equals</operation>
            <value>能</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_Importation_Document_Detail__c.ASI_MFM_Importation_Document__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Importation Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Request_Purpose__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IDN-{YY}{000000}</displayFormat>
        <label>Importation Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Importation Documents</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Importation_Document</fullName>
        <active>true</active>
        <label>CN Importation Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Importation_Document_RO</fullName>
        <active>true</active>
        <label>CN Importation Document RO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_CN_ValidateTotalNumberOfLine</fullName>
        <active>true</active>
        <description>if total line &gt; 10, not allow to submit request</description>
        <errorConditionFormula>ASI_MFM_Total_Number_of_Line__c &gt; 10 &amp;&amp; RecordType.DeveloperName == &apos;ASI_MFM_CN_Importation_Document&apos; &amp;&amp;  TEXT(PRIORVALUE( ASI_MFM_Status__c )) == &apos;Draft&apos; &amp;&amp; TEXT (ASI_MFM_Status__c) == &apos;Submitted&apos;</errorConditionFormula>
        <errorMessage>You are NOT allowed to submit request with more than 10 Lines</errorMessage>
    </validationRules>
</CustomObject>